@@ -4,15 +4,15 @@ import io.wispforest.owo.ui.component.ButtonComponent;
 import io.wispforest.owo.ui.container.FlowLayout;
 import io.wispforest.owo.ui.core.Sizing;
 import me.noramibu.itemeditor.editor.ItemEditorState;
-import me.noramibu.itemeditor.editor.text.RichTextDocument;
-import me.noramibu.itemeditor.ui.component.StyledTextFieldSection;
+import me.noramibu.itemeditor.storage.StorageSortMode;
 import me.noramibu.itemeditor.ui.component.UiFactory;
+import me.noramibu.itemeditor.ui.screen.StorageScreen;
+import me.noramibu.itemeditor.ui.screen.StorageScreenMode;
 import me.noramibu.itemeditor.ui.util.LayoutModeUtil;
 import me.noramibu.itemeditor.util.IdFieldNormalizer;
 import me.noramibu.itemeditor.util.ItemEditorCapabilities;
 import me.noramibu.itemeditor.util.ItemEditorText;
 import me.noramibu.itemeditor.util.RegistryUtil;
-import me.noramibu.itemeditor.util.TextComponentUtil;
 import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
@@ -32,21 +32,13 @@ public final class SpawnEggSpecialDataSection {
 
     private static final int VILLAGER_ID_WIDTH = 220;
     private static final int ENTITY_ID_FIELD_WIDTH = 280;
-    private static final int HEALTH_FIELD_WIDTH = 120;
-    private static final int VILLAGER_LEVEL_FIELD_WIDTH = 90;
-    private static final int TRADE_ITEM_ID_FIELD_WIDTH = 180;
-    private static final int TRADE_ITEM_COUNT_FIELD_WIDTH = 54;
-    private static final int TRADE_SHORT_FIELD_WIDTH = 95;
-    private static final int NAME_EDITOR_HEIGHT = 54;
     private static final int COMPACT_LAYOUT_WIDTH_THRESHOLD = 620;
-    private static final String ACTION_COPY = "Copy";
+    private static final String ACTION_DUPLICATE = "Duplicate";
     private static final String ACTION_RESET_FLAGS = "Reset Flags";
     private static final String ACTION_DISPLAY_PRESET = "Display Preset";
-    private static final String ACTION_DUPLICATE_LAST = "Duplicate Last";
     private static final String ACTION_CLEAR_ALL = "Clear All";
     private static final String ACTION_SWAP_BUY_SELL = "Swap Buy/Sell";
     private static final String ACTION_RESET_TRADE = "Reset Trade";
-    private static final int ACTION_BUTTON_WIDTH_MIN = 76;
     private static final int ACTION_BUTTON_WIDTH_MAX = 176;
     private static final int ACTION_BUTTON_ROW_RESERVE = 12;
 
@@ -64,7 +56,7 @@ public final class SpawnEggSpecialDataSection {
         section.child(buildNameCard(context, special));
         section.child(buildFlagsCard(context, special));
         section.child(buildValuesCard(context, special));
-        if (isVillagerSelected(context, special.spawnEggEntityId)) {
+        if (isVillagerSelected(context, special.spawnEggEntity.entityId)) {
             section.child(buildVillagerCard(context, special));
         }
         return section;
@@ -79,7 +71,7 @@ public final class SpawnEggSpecialDataSection {
         int entityActionWidth = resolveButtonWidth(context, 3);
         row.child(
                 UiFactory.textBox(
-                                special.spawnEggEntityId,
+                                special.spawnEggEntity.entityId,
                                 value -> updateSelectedEntity(context, special, value)
                         )
                 .horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(ENTITY_ID_FIELD_WIDTH))
@@ -104,11 +96,11 @@ public final class SpawnEggSpecialDataSection {
             ItemEditorState.SpecialData special,
             String rawValue
     ) {
-        String previousEntityId = special.spawnEggEntityId;
-        boolean wasVillager = isVillagerSelected(context, special.spawnEggEntityId);
+        String previousEntityId = special.spawnEggEntity.entityId;
+        boolean wasVillager = isVillagerSelected(context, special.spawnEggEntity.entityId);
         String normalized = IdFieldNormalizer.normalize(rawValue);
-        context.mutate(() -> special.spawnEggEntityId = normalized);
-        boolean isVillager = isVillagerSelected(context, special.spawnEggEntityId);
+        context.mutate(() -> special.spawnEggEntity.entityId = normalized);
+        boolean isVillager = isVillagerSelected(context, special.spawnEggEntity.entityId);
         if (wasVillager != isVillager || variantFieldsChanged(context, previousEntityId, normalized)) {
             context.screen().refreshCurrentPanel();
         }
@@ -119,11 +111,11 @@ public final class SpawnEggSpecialDataSection {
             ItemEditorState.SpecialData special,
             String entityId
     ) {
-        String previousEntityId = special.spawnEggEntityId;
+        String previousEntityId = special.spawnEggEntity.entityId;
         String normalized = IdFieldNormalizer.normalize(entityId);
-        boolean wasVillager = isVillagerSelected(context, special.spawnEggEntityId);
-        context.mutate(() -> special.spawnEggEntityId = normalized);
-        boolean isVillager = isVillagerSelected(context, special.spawnEggEntityId);
+        boolean wasVillager = isVillagerSelected(context, special.spawnEggEntity.entityId);
+        context.mutate(() -> special.spawnEggEntity.entityId = normalized);
+        boolean isVillager = isVillagerSelected(context, special.spawnEggEntity.entityId);
         if (wasVillager != isVillager || variantFieldsChanged(context, previousEntityId, normalized)) {
             context.screen().refreshCurrentPanel();
         } else {
@@ -198,31 +190,14 @@ public final class SpawnEggSpecialDataSection {
 
     private static FlowLayout buildNameCard(SpecialDataPanelContext context, ItemEditorState.SpecialData special) {
         FlowLayout card = UiFactory.subCard();
-        card.child(UiFactory.title(ItemEditorText.tr("special.spawn_egg.name")).shadow(false));
-
-        StyledTextFieldSection.BoundEditor nameSection = StyledTextFieldSection.create(
-                context.screen(),
-                RichTextDocument.fromMarkup(special.spawnEggCustomName),
-                Sizing.fill(100),
-                UiFactory.fixed(NAME_EDITOR_HEIGHT),
-                ItemEditorText.str("special.spawn_egg.name.placeholder"),
-                StyledTextFieldSection.StylePreset.name(),
-                ItemEditorText.str("special.spawn_egg.name.color_title"),
-                ItemEditorText.str("special.spawn_egg.name.gradient_title"),
-                "",
-                "",
-                null,
-                document -> document.logicalLineCount() > 1
-                        ? ItemEditorText.str("special.spawn_egg.name.single_line")
-                        : null,
-                document -> context.mutate(() -> special.spawnEggCustomName = TextComponentUtil.serializeEditorDocument(document))
-        );
-
-        FlowLayout frame = UiFactory.framedEditorCard();
-        frame.child(nameSection.toolbar());
-        frame.child(nameSection.editor());
-        frame.child(nameSection.validation());
-        card.child(frame);
+        card.child(EntitySpawnDataUi.nameEditor(
+                context,
+                special.spawnEggEntity,
+                ItemEditorText.tr("special.spawn_egg.name"),
+                "special.spawn_egg.name.placeholder",
+                "special.spawn_egg.name.color_title",
+                "special.spawn_egg.name.gradient_title"
+        ));
         return card;
     }
 
@@ -236,70 +211,30 @@ public final class SpawnEggSpecialDataSection {
         int flagsActionWidth = resolveButtonWidth(context, 2);
         ButtonComponent resetFlags = UiFactory.button(Component.literal(ACTION_RESET_FLAGS), UiFactory.ButtonTextPreset.STANDARD,  button ->
                 context.mutateRefresh(() -> {
-                    special.spawnEggNoAi = false;
-                    special.spawnEggSilent = false;
-                    special.spawnEggNoGravity = false;
-                    special.spawnEggGlowing = false;
-                    special.spawnEggInvulnerable = false;
-                    special.spawnEggPersistenceRequired = false;
-                    special.spawnEggCustomNameVisible = false;
+                    special.spawnEggEntity.noAi = false;
+                    special.spawnEggEntity.silent = false;
+                    special.spawnEggEntity.noGravity = false;
+                    special.spawnEggEntity.glowing = false;
+                    special.spawnEggEntity.invulnerable = false;
+                    special.spawnEggEntity.persistenceRequired = false;
+                    special.spawnEggEntity.customNameVisible = false;
                 })
         );
         resetFlags.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(flagsActionWidth));
         presets.child(resetFlags);
         ButtonComponent displayPreset = UiFactory.button(Component.literal(ACTION_DISPLAY_PRESET), UiFactory.ButtonTextPreset.STANDARD,  button ->
                 context.mutateRefresh(() -> {
-                    special.spawnEggNoAi = true;
-                    special.spawnEggSilent = true;
-                    special.spawnEggNoGravity = true;
-                    special.spawnEggInvulnerable = true;
-                    special.spawnEggPersistenceRequired = true;
+                    special.spawnEggEntity.noAi = true;
+                    special.spawnEggEntity.silent = true;
+                    special.spawnEggEntity.noGravity = true;
+                    special.spawnEggEntity.invulnerable = true;
+                    special.spawnEggEntity.persistenceRequired = true;
                 })
         );
         displayPreset.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(flagsActionWidth));
         presets.child(displayPreset);
         card.child(presets);
-
-        FlowLayout rowA = compactLayout ? UiFactory.column() : UiFactory.row();
-        rowA.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.no_ai"),
-                special.spawnEggNoAi,
-                value -> context.mutateRefresh(() -> special.spawnEggNoAi = value)
-        ));
-        rowA.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.silent"),
-                special.spawnEggSilent,
-                value -> context.mutateRefresh(() -> special.spawnEggSilent = value)
-        ));
-        rowA.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.no_gravity"),
-                special.spawnEggNoGravity,
-                value -> context.mutateRefresh(() -> special.spawnEggNoGravity = value)
-        ));
-        card.child(rowA);
-
-        FlowLayout rowB = compactLayout ? UiFactory.column() : UiFactory.row();
-        rowB.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.glowing"),
-                special.spawnEggGlowing,
-                value -> context.mutateRefresh(() -> special.spawnEggGlowing = value)
-        ));
-        rowB.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.invulnerable"),
-                special.spawnEggInvulnerable,
-                value -> context.mutateRefresh(() -> special.spawnEggInvulnerable = value)
-        ));
-        rowB.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.persistent"),
-                special.spawnEggPersistenceRequired,
-                value -> context.mutateRefresh(() -> special.spawnEggPersistenceRequired = value)
-        ));
-        rowB.child(UiFactory.checkbox(
-                ItemEditorText.tr("special.spawn_egg.name_visible"),
-                special.spawnEggCustomNameVisible,
-                value -> context.mutateRefresh(() -> special.spawnEggCustomNameVisible = value)
-        ));
-        card.child(rowB);
+        card.child(EntitySpawnDataUi.flags(context, special.spawnEggEntity, compactLayout ? 2 : 3));
         return card;
     }
 
@@ -307,15 +242,7 @@ public final class SpawnEggSpecialDataSection {
         boolean compactLayout = isCompactLayout(context);
         FlowLayout card = UiFactory.subCard();
         card.child(UiFactory.title(ItemEditorText.tr("special.spawn_egg.values")).shadow(false));
-
-        card.child(UiFactory.field(
-                ItemEditorText.tr("special.spawn_egg.health"),
-                Component.empty(),
-                UiFactory.textBox(
-                        special.spawnEggHealth,
-                        context.bindText(value -> special.spawnEggHealth = value)
-                ).horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(HEALTH_FIELD_WIDTH))
-        ));
+        card.child(EntitySpawnDataUi.health(context, special.spawnEggEntity, compactLayout));
         return card;
     }
 
@@ -325,95 +252,67 @@ public final class SpawnEggSpecialDataSection {
         card.child(UiFactory.title(ItemEditorText.tr("special.spawn_egg.villager.title")).shadow(false));
 
         FlowLayout villagerDataRow = compactLayout ? UiFactory.column() : UiFactory.row();
-        villagerDataRow.child(idFieldWithPicker(
+        FlowLayout typeField = idFieldWithPicker(
                 context,
                 ItemEditorText.tr("special.spawn_egg.villager.type"),
                 special.spawnEggVillagerTypeId,
                 value -> special.spawnEggVillagerTypeId = value,
                 villagerTypeIds(context),
                 ItemEditorText.str("special.spawn_egg.villager.select_type")
-        ));
-        villagerDataRow.child(idFieldWithPicker(
+        );
+        typeField.horizontalSizing(Sizing.fill(compactLayout ? 100 : 40));
+        villagerDataRow.child(typeField);
+        FlowLayout professionField = idFieldWithPicker(
                 context,
                 ItemEditorText.tr("special.spawn_egg.villager.profession"),
                 special.spawnEggVillagerProfessionId,
                 value -> special.spawnEggVillagerProfessionId = value,
                 villagerProfessionIds(context),
                 ItemEditorText.str("special.spawn_egg.villager.select_profession")
-        ));
-        villagerDataRow.child(UiFactory.field(
+        );
+        professionField.horizontalSizing(Sizing.fill(compactLayout ? 100 : 40));
+        villagerDataRow.child(professionField);
+        FlowLayout levelField = UiFactory.field(
                 ItemEditorText.tr("special.spawn_egg.villager.level"),
                 Component.empty(),
                 UiFactory.textBox(
                         special.spawnEggVillagerLevel,
                         context.bindText(value -> special.spawnEggVillagerLevel = value)
-                ).horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(VILLAGER_LEVEL_FIELD_WIDTH))
-        ));
+                )
+        );
+        levelField.horizontalSizing(Sizing.fill(compactLayout ? 100 : 14));
+        villagerDataRow.child(levelField);
         card.child(villagerDataRow);
 
         card.child(UiFactory.title(ItemEditorText.tr("special.spawn_egg.villager.trades")).shadow(false));
-        FlowLayout actions = compactLayout ? UiFactory.column() : UiFactory.row();
-        actions.gap(6);
-        int villagerActionCount = special.spawnEggVillagerTrades.isEmpty() ? 2 : 3;
-        int villagerActionWidth = resolveButtonWidth(context, villagerActionCount);
-        ButtonComponent addTrade = UiFactory.button(ItemEditorText.tr("special.spawn_egg.villager.add_trade"), UiFactory.ButtonTextPreset.STANDARD,  button ->
+        ButtonComponent addTrade = UiFactory.button(ItemEditorText.tr("special.spawn_egg.villager.add_trade"), UiFactory.ButtonTextPreset.STANDARD, button ->
                 context.mutateRefresh(() -> special.spawnEggVillagerTrades.add(new ItemEditorState.VillagerTradeDraft()))
         );
-        addTrade.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(villagerActionWidth));
-        actions.child(addTrade);
-        ButtonComponent duplicateLast = UiFactory.button(Component.literal(ACTION_DUPLICATE_LAST), UiFactory.ButtonTextPreset.STANDARD,  button ->
-                context.mutateRefresh(() -> {
-                    if (special.spawnEggVillagerTrades.isEmpty()) {
-                        return;
-                    }
-                    ItemEditorState.VillagerTradeDraft source = special.spawnEggVillagerTrades.getLast();
-                    special.spawnEggVillagerTrades.add(copyTrade(source));
-                })
-        );
-        duplicateLast.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(villagerActionWidth));
-        actions.child(duplicateLast);
+        ButtonComponent clearTrades = null;
         if (!special.spawnEggVillagerTrades.isEmpty()) {
-            ButtonComponent clearTrades = UiFactory.button(Component.literal(ACTION_CLEAR_ALL), UiFactory.ButtonTextPreset.STANDARD,  button ->
+            clearTrades = UiFactory.button(Component.literal(ACTION_CLEAR_ALL), UiFactory.ButtonTextPreset.STANDARD, button ->
                     context.mutateRefresh(special.spawnEggVillagerTrades::clear)
             );
-            clearTrades.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(villagerActionWidth));
-            actions.child(clearTrades);
         }
-        card.child(actions);
+        card.child(UiFactory.actionButtonRow(addTrade, clearTrades));
 
         if (special.spawnEggVillagerTrades.isEmpty()) {
             card.child(UiFactory.muted(ItemEditorText.tr("special.spawn_egg.villager.trades_empty")));
             return card;
         }
 
+        ButtonComponent expandAll = UiFactory.button(ItemEditorText.tr("common.expand_all"), UiFactory.ButtonTextPreset.STANDARD, button ->
+                context.mutateRefresh(() -> special.spawnEggVillagerTrades.forEach(trade -> trade.uiCollapsed = false))
+        );
+        ButtonComponent collapseAll = UiFactory.button(ItemEditorText.tr("common.collapse_all"), UiFactory.ButtonTextPreset.STANDARD, button ->
+                context.mutateRefresh(() -> special.spawnEggVillagerTrades.forEach(trade -> trade.uiCollapsed = true))
+        );
+        card.child(UiFactory.actionButtonRow(expandAll, collapseAll));
+
         List<String> itemIds = itemIds(context);
         for (int index = 0; index < special.spawnEggVillagerTrades.size(); index++) {
-            int currentIndex = index;
+            FlowLayout tradeCard = tradeCard(context, special, index);
             ItemEditorState.VillagerTradeDraft trade = special.spawnEggVillagerTrades.get(index);
-            FlowLayout tradeCard = context.createReorderableCard(
-                    ItemEditorText.tr("special.spawn_egg.villager.trade", index + 1),
-                    currentIndex > 0,
-                    () -> swapEntries(special.spawnEggVillagerTrades, currentIndex, currentIndex - 1),
-                    currentIndex < special.spawnEggVillagerTrades.size() - 1,
-                    () -> swapEntries(special.spawnEggVillagerTrades, currentIndex, currentIndex + 1),
-                    () -> special.spawnEggVillagerTrades.remove(currentIndex)
-            );
-
-            FlowLayout summaryRow = compactLayout ? UiFactory.column() : UiFactory.row();
-            summaryRow.gap(6);
-            int summaryActionWidth = resolveButtonWidth(context, 2);
-            summaryRow.child(UiFactory.muted(Component.literal(tradeSummary(trade))));
-            ButtonComponent collapseToggle = UiFactory.button(LayoutModeUtil.sectionToggleText(trade.uiCollapsed), UiFactory.ButtonTextPreset.STANDARD,  button ->
-                    context.mutateRefresh(() -> trade.uiCollapsed = !trade.uiCollapsed)
-            );
-            collapseToggle.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(summaryActionWidth));
-            summaryRow.child(collapseToggle);
-            ButtonComponent duplicateTrade = UiFactory.button(Component.literal(ACTION_COPY), UiFactory.ButtonTextPreset.STANDARD,  button ->
-                    context.mutateRefresh(() -> special.spawnEggVillagerTrades.add(currentIndex + 1, copyTrade(trade)))
-            );
-            duplicateTrade.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(summaryActionWidth));
-            summaryRow.child(duplicateTrade);
-            tradeCard.child(summaryRow);
 
             if (trade.uiCollapsed) {
                 card.child(tradeCard);
@@ -441,21 +340,15 @@ public final class SpawnEggSpecialDataSection {
                     itemIds,
                     ItemEditorText.str("special.spawn_egg.villager.trade.sell")
             ));
-            ButtonComponent swapItems = UiFactory.button(Component.literal(ACTION_SWAP_BUY_SELL), UiFactory.ButtonTextPreset.STANDARD,  button ->
+            ButtonComponent swapItems = UiFactory.button(Component.literal(ACTION_SWAP_BUY_SELL), UiFactory.ButtonTextPreset.STANDARD, button ->
                     context.mutateRefresh(() -> swapBuyAndSell(trade))
             );
-            int tradeActionWidth = resolveButtonWidth(context, 1);
-            swapItems.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(tradeActionWidth));
-            tradeCard.child(swapItems);
+            ButtonComponent resetTrade = UiFactory.button(Component.literal(ACTION_RESET_TRADE), UiFactory.ButtonTextPreset.STANDARD, button ->
+                    context.mutateRefresh(() -> resetTrade(trade))
+            );
+            tradeCard.child(UiFactory.actionButtonRow(swapItems, resetTrade));
 
-            FlowLayout valuesRow = compactLayout ? UiFactory.column() : UiFactory.row();
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.max_uses"), trade.maxUses, value -> trade.maxUses = value));
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.uses"), trade.uses, value -> trade.uses = value));
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.xp"), trade.villagerXp, value -> trade.villagerXp = value));
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.price_multiplier"), trade.priceMultiplier, value -> trade.priceMultiplier = value));
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.demand"), trade.demand, value -> trade.demand = value));
-            valuesRow.child(shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.special_price"), trade.specialPrice, value -> trade.specialPrice = value));
-            tradeCard.child(valuesRow);
+            tradeCard.child(tradeValueRows(context, trade));
 
             tradeCard.child(UiFactory.checkbox(
                     ItemEditorText.tr("special.spawn_egg.villager.trade.reward_exp"),
@@ -463,15 +356,45 @@ public final class SpawnEggSpecialDataSection {
                     value -> context.mutate(() -> trade.rewardExp = value)
             ));
 
-            ButtonComponent resetTrade = UiFactory.button(Component.literal(ACTION_RESET_TRADE), UiFactory.ButtonTextPreset.STANDARD,  button ->
-                    context.mutateRefresh(() -> resetTrade(trade))
-            );
-            resetTrade.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(tradeActionWidth));
-            tradeCard.child(resetTrade);
-
             card.child(tradeCard);
         }
 
+        return card;
+    }
+
+    private static FlowLayout tradeCard(
+            SpecialDataPanelContext context,
+            ItemEditorState.SpecialData special,
+            int currentIndex
+    ) {
+        ItemEditorState.VillagerTradeDraft trade = special.spawnEggVillagerTrades.get(currentIndex);
+        FlowLayout card = UiFactory.subCard();
+        FlowLayout titleRow = UiFactory.row();
+        titleRow.child(UiFactory.title(ItemEditorText.tr("special.spawn_egg.villager.trade", currentIndex + 1))
+                .shadow(false)
+                .horizontalSizing(Sizing.expand(100)));
+        titleRow.child(UiFactory.collapseToggleButton(
+                trade.uiCollapsed,
+                () -> context.mutateRefresh(() -> trade.uiCollapsed = !trade.uiCollapsed)
+        ));
+        card.child(titleRow);
+        card.child(UiFactory.muted(Component.literal(tradeSummary(trade))));
+
+        ButtonComponent upButton = UiFactory.button(ItemEditorText.tr("common.up"), UiFactory.ButtonTextPreset.COMPACT, button ->
+                context.mutateRefresh(() -> swapEntries(special.spawnEggVillagerTrades, currentIndex, currentIndex - 1))
+        );
+        upButton.active(currentIndex > 0);
+        ButtonComponent downButton = UiFactory.button(ItemEditorText.tr("common.down"), UiFactory.ButtonTextPreset.COMPACT, button ->
+                context.mutateRefresh(() -> swapEntries(special.spawnEggVillagerTrades, currentIndex, currentIndex + 1))
+        );
+        downButton.active(currentIndex < special.spawnEggVillagerTrades.size() - 1);
+        ButtonComponent duplicateButton = UiFactory.button(Component.literal(ACTION_DUPLICATE), UiFactory.ButtonTextPreset.COMPACT, button ->
+                context.mutateRefresh(() -> special.spawnEggVillagerTrades.add(currentIndex + 1, copyTrade(trade)))
+        );
+        ButtonComponent removeButton = UiFactory.negativeButton(ItemEditorText.tr("common.remove"), UiFactory.ButtonTextPreset.STANDARD, button ->
+                context.mutateRefresh(() -> special.spawnEggVillagerTrades.remove(currentIndex))
+        );
+        card.child(UiFactory.actionButtonRow(upButton, downButton, duplicateButton, removeButton));
         return card;
     }
 
@@ -512,26 +435,67 @@ public final class SpawnEggSpecialDataSection {
         FlowLayout row = compactLayout ? UiFactory.column() : UiFactory.row();
         row.child(UiFactory.textBox(
                 stackDraft.itemId,
-                value -> context.mutate(() -> stackDraft.itemId = IdFieldNormalizer.normalize(value))
-        ).horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(TRADE_ITEM_ID_FIELD_WIDTH)));
+                value -> context.mutate(() -> {
+                    stackDraft.itemId = IdFieldNormalizer.normalize(value);
+                    stackDraft.templateStack = ItemStack.EMPTY;
+                })
+        ).horizontalSizing(Sizing.fill(compactLayout ? 100 : 50)));
         row.child(UiFactory.textBox(
                 stackDraft.count,
                 context.bindText(value -> stackDraft.count = value)
-        ).horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(TRADE_ITEM_COUNT_FIELD_WIDTH)));
-        ButtonComponent pickButton = UiFactory.button(ItemEditorText.tr("common.pick"), UiFactory.ButtonTextPreset.STANDARD,  button ->
+        ).horizontalSizing(Sizing.fill(compactLayout ? 100 : 10)));
+        ButtonComponent pickButton = UiFactory.button(ItemEditorText.tr("common.pick"), UiFactory.ButtonTextPreset.STANDARD, button ->
                 context.openSearchablePicker(
                         pickerTitle,
                         "",
                         itemIds,
                         id -> id,
-                        id -> context.mutateRefresh(() -> stackDraft.itemId = id)
+                        id -> context.mutateRefresh(() -> {
+                            stackDraft.itemId = id;
+                            stackDraft.templateStack = ItemStack.EMPTY;
+                        })
                 )
         );
-        int pickerButtonWidth = resolveButtonWidth(context, 4);
-        pickButton.horizontalSizing(compactLayout ? Sizing.fill(100) : Sizing.fixed(pickerButtonWidth));
+        pickButton.horizontalSizing(Sizing.fill(compactLayout ? 100 : 15));
         row.child(pickButton);
+        ButtonComponent inventoryPickButton = UiFactory.button(
+                ItemEditorText.tr("special.spawn_egg.villager.trade.pick_inventory"),
+                UiFactory.ButtonTextPreset.STANDARD,
+                button -> {
+                    double panelScroll = context.screen().panelScrollOffset();
+                    context.screen().session().minecraft().setScreen(new StorageScreen(
+                            1,
+                            "",
+                            StorageSortMode.REGULAR,
+                            StorageScreenMode.PICK_FOR_EDIT,
+                            context.screen(),
+                            stack -> {
+                                context.mutateRefresh(() -> setTradeStackFromInventory(stackDraft, stack));
+                                context.screen().preservePanelScrollOnNextBuild(panelScroll);
+                                context.screen().restorePanelScroll(panelScroll);
+                            }
+                    ));
+                }
+        );
+        inventoryPickButton.horizontalSizing(Sizing.fill(compactLayout ? 100 : 25));
+        row.child(inventoryPickButton);
         container.child(row);
         return container;
+    }
+
+    private static void setTradeStackFromInventory(
+            ItemEditorState.TradeStackDraft stackDraft,
+            ItemStack stack
+    ) {
+        if (stack == null || stack.isEmpty()) {
+            stackDraft.itemId = "";
+            stackDraft.count = "1";
+            stackDraft.templateStack = ItemStack.EMPTY;
+            return;
+        }
+        stackDraft.itemId = BuiltInRegistries.ITEM.getKey(stack.getItem()).toString();
+        stackDraft.count = Integer.toString(stack.getCount());
+        stackDraft.templateStack = stack.copy();
     }
 
     private static FlowLayout idFieldWithPicker(
@@ -583,12 +547,43 @@ public final class SpawnEggSpecialDataSection {
             String value,
             Consumer<String> setter
     ) {
-        boolean compactLayout = isCompactLayout(context);
         return UiFactory.field(
                 label,
                 Component.empty(),
-                UiFactory.textBox(value, context.bindText(setter)).horizontalSizing(compactLayout ? Sizing.fill(100) : UiFactory.fixed(TRADE_SHORT_FIELD_WIDTH))
+                UiFactory.textBox(value, context.bindText(setter))
         );
+    }
+
+    private static FlowLayout tradeValueRows(
+            SpecialDataPanelContext context,
+            ItemEditorState.VillagerTradeDraft trade
+    ) {
+        boolean compactLayout = isCompactLayout(context);
+        FlowLayout rows = UiFactory.column();
+        rows.child(tradeValueRow(
+                compactLayout,
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.max_uses"), trade.maxUses, value -> trade.maxUses = value),
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.uses"), trade.uses, value -> trade.uses = value),
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.xp"), trade.villagerXp, value -> trade.villagerXp = value)
+        ));
+        rows.child(tradeValueRow(
+                compactLayout,
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.price_multiplier"), trade.priceMultiplier, value -> trade.priceMultiplier = value),
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.demand"), trade.demand, value -> trade.demand = value),
+                shortField(context, ItemEditorText.tr("special.spawn_egg.villager.trade.special_price"), trade.specialPrice, value -> trade.specialPrice = value)
+        ));
+        return rows;
+    }
+
+    private static FlowLayout tradeValueRow(boolean compactLayout, FlowLayout first, FlowLayout second, FlowLayout third) {
+        FlowLayout row = compactLayout ? UiFactory.column() : UiFactory.row();
+        first.horizontalSizing(Sizing.fill(compactLayout ? 100 : 33));
+        second.horizontalSizing(Sizing.fill(compactLayout ? 100 : 33));
+        third.horizontalSizing(Sizing.fill(compactLayout ? 100 : 33));
+        row.child(first);
+        row.child(second);
+        row.child(third);
+        return row;
     }
 
     private static boolean isCompactLayout(SpecialDataPanelContext context) {
@@ -623,6 +618,7 @@ public final class SpawnEggSpecialDataSection {
     private static void copyTradeStack(ItemEditorState.TradeStackDraft source, ItemEditorState.TradeStackDraft target) {
         target.itemId = source.itemId;
         target.count = source.count;
+        target.templateStack = source.templateStack == null ? ItemStack.EMPTY : source.templateStack.copy();
     }
 
     private static void swapBuyAndSell(ItemEditorState.VillagerTradeDraft trade) {
@@ -667,6 +663,6 @@ public final class SpawnEggSpecialDataSection {
                 ACTION_BUTTON_WIDTH_MAX,
                 (contentWidth - UiFactory.scaledPixels(ACTION_BUTTON_ROW_RESERVE)) / Math.max(1, buttonCount)
         );
-        return Math.max(1, Math.min(contentWidth, preferred));
+        return Math.clamp(preferred, 1, contentWidth);
     }
 }
